--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
+  <style>
+    
+  </style>
   <body>
-    <div id="app" style="height: 100vw;width: 100vh;"></div>
+    <div id="app" style=""></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
