--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <style>
-    
-  </style>
+  <style></style>
   <body>
     <div id="app" style=""></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
+  <script src="/css.js"></script>
 </html>
