--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <script src="/css.js"></script>
+  <!-- <script src="/css.js"></script> -->
   <style></style>
   <body>
     <div id="app" style=""></div>
